#33: Cleaning up some spacing issues on add forms.

--- a/styles.css
+++ b/styles.css
@@ -4138,12 +4138,13 @@ ul#inventory-table .issue-meta {
 .add-block .headline {
   margin-top: 15px;
 }
-.add-block p {
-  margin-top: 10px;
-}
 
 .add-block.active {
   display: block;
+}
+
+.add-form {
+  margin-top: 15px;
 }
 
 .add-success {
@@ -4254,10 +4255,6 @@ ul#inventory-table .issue-meta {
 
 #form-add-series-1 .form-group:last-child {
   margin-top: 42px;
-}
-
-#form-series-add {
-  margin-top: 15px;
 }
 
 .form-radio .series-search-result {
